--- a/Projects/Project/Project/Project.csproj
+++ b/Projects/Project/Project/Project.csproj
@@ -73,6 +73,7 @@
     </ApplicationDefinition>
     <Compile Include="Converters\AgeConverter.cs" />
     <Compile Include="Converters\GenderConverter.cs" />
+    <Compile Include="Converters\HiddenElementConverter.cs" />
     <Compile Include="Helpers\DeleteMessage.cs" />
     <Compile Include="Helpers\MessageListener.cs" />
     <Compile Include="Helpers\XmlSerialization.cs" />
