Added converter, which change opacity of elements

--- a/Projects/Project/Project/Project.csproj
+++ b/Projects/Project/Project/Project.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Converters\GenderConverter.cs" />
     <Compile Include="Converters\HiddenElementConverter.cs" />
     <Compile Include="Converters\NoElementInCollectionConverter.cs" />
+    <Compile Include="Converters\OpacityConverter.cs" />
     <Compile Include="Helpers\DeleteMessage.cs" />
     <Compile Include="Helpers\MessageListener.cs" />
     <Compile Include="Helpers\XmlSerialization.cs" />
