--- a/Projects/Project/Project/Project.csproj
+++ b/Projects/Project/Project/Project.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Converters\HiddenElementConverter.cs" />
     <Compile Include="Converters\NoElementInCollectionConverter.cs" />
     <Compile Include="Converters\OpacityConverter.cs" />
+    <Compile Include="Helpers\BackDataFromChildForm.cs" />
     <Compile Include="Helpers\DeleteMessage.cs" />
     <Compile Include="Helpers\MessageListener.cs" />
     <Compile Include="Helpers\OpenChildWindowAddOrEdit.cs" />
